<resources>
    <string name="app_name">NMedia</string>
    <string name="post_text">Post text</string>
    <string name="edit">Edit post</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="description_post_save">Save</string>
    <string name="description_post_share">Share</string>
    <string name="chooser_share_post">chooser_share_post</string>
    <string name="error_empty_content">Content can\\\'t be empty</string>
    <string name="add_post">Add_post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked  %2$s   post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="new_post">New post! author: %1$s</string>
    <string name="notification_new_post">\\n  %1$s</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Load Posts</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error">Something  wrong. Try  later</string>
    <string name="you_have_new_posts">You have new posts</string>
    <string name="description_photo">Photo</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="remove">Remove</string>
    <string name="fragment_feed">Feed</string>
    <string name="fragment_new_post">New Post</string>
    <string name="fragment_image">Image</string>
    <string name="login">login</string>
    <string name="regidter">regidter</string>
    <string name="logout">logout</string>
    <string name="authorization">Authorization</string>
    <string name="password">Password</string>
    <string name="enter_login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="Exit">Are you sure to get out</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="Login_not_found">Login not found</string>
    <string name="Wait_authorization">Wait authorization</string>
    <string name="Login_is_Null">Login is Null</string>
    <string name="Password_not_correct">Password not correct</string>
    <string name="Login_Name_is_not_empty">Login/Name is not empty</string>
</resources>