<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/Auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/authorization"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </TextView>

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:ems="9"
        android:hint="@string/enter_login"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/Auth"
        app:layout_constraintTop_toBottomOf="@+id/Auth"

        tools:ignore="MissingConstraints">

    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="9"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login"

        tools:ignore="MissingConstraints">

    </EditText>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_marginStart="4dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="MissingConstraints">

    </Button>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loginGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="Auth, login, password, buttonLogin"

        />

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/registration"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </TextView>

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:ems="9"
        android:hint="Name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/registration"
        app:layout_constraintTop_toBottomOf="@+id/registration"
        tools:ignore="MissingConstraints">

    </EditText>

    <EditText

        android:id="@+id/loginRegistr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="9"
        android:hint="@string/login"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="MissingConstraints">

    </EditText>

    <EditText

        android:id="@+id/passRegistr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="9"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/loginRegistr"
        app:layout_constraintTop_toBottomOf="@+id/loginRegistr"
        tools:ignore="MissingConstraints">

    </EditText>

    <EditText

        android:id="@+id/passCheckRegistr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="9"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/passRegistr"
        app:layout_constraintTop_toBottomOf="@+id/passRegistr"
        tools:ignore="MissingConstraints">

    </EditText>

    <Button
        android:id="@+id/registrButton"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_marginStart="4dp"
        android:text="@string/registration"
        app:layout_constraintStart_toStartOf="@+id/passCheckRegistr"
        app:layout_constraintTop_toBottomOf="@+id/passCheckRegistr"
        tools:ignore="MissingConstraints">

    </Button>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/registrGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="registration,name,loginRegistr,passRegistr,passCheckRegistr,registrButton"

        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>